# sampling-nn-d01c-codex

./: .resource_finder_complete  CODE_WALKTHROUGH.md  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md  dataset_summary.json
logs/: execution_codex_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper/: OUTLINE.md
paper_draft/: main.tex  references.bib
paper_draft/commands/: general.tex  macros.tex
paper_draft/figures/: method_overview.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: datasets.tex  main_results.tex  paired_differences.tex  sample_count.tex
papers/: README.md
papers/pages/: 2016_gulcehre_noisy_activation_functions_manifest.txt  2018_dhillon_stochastic_activation_pruning_manifest.txt  2021_morales_activation_level_uncertainty_manifest.txt  2021_yu_simple_effective_stochastic_neural_networks_manifest.txt  2022_daubener_sampling_robustness_snn_manifest.txt  2026_ghantasala_sampling_dnn_performance_manifest.txt
results/: data_metadata.csv  environment.json  metrics_raw.csv  metrics_raw.json  metrics_summary.csv  statistical_tests.csv  training_history.csv  validation.json
src/: sampling_nn_experiment.py
