[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=4.0.0",
    "beautifulsoup4>=4.15.0",
    "datasets>=5.0.0",
    "huggingface-hub>=1.19.0",
    "lxml>=6.1.1",
    "matplotlib>=3.10.9",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "pypdf>=6.13.2",
    "requests>=2.33.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "torch>=2.12.0",
    "tqdm>=4.68.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
